# krpc

./: .gitignore  AGENTS.md  CMakeLists.txt  w3.md  开发指南.md
apps/gateway/: main.cpp
build_manual/: config_snapshot_test  rpc_abstraction_test
cmake/: ProjectOptions.cmake
doc/: w1_w2_开发改动文档.md
docs/: 10.1.md  w1.md  w10.md  w11.md  w12.md  w13.md  w14.md  w15.md  w16.md  w17.md  w18.md  w2.md  w3.md  w4.md  w5.md  w6.md  w7.md  w8.md  w9.md  已写代码改造清单.md  模块目录规划.md  深度学习报告-终极版-当前项目差异优化版.md  深度学习报告-终极版.md  深度学习报告-项目全量版.md  面试极限拷问题库.md
include/rpc/common/: version.h
include/rpc/gateway/: gateway.h  http_gateway.h  http_parser.h
include/rpc/infra/: infra.h  memory_pool.h  structured_log.h
include/rpc/infra/raft/: raft_cluster.h  raft_rpc.h  raft_storage.h
include/rpc/net/: net.h  reactor_http_server.h
include/rpc/rpc/: client.h  krpc_channel.h
include/rpc/runtime/: coroutine.h  hook.h  io_manager.h  request_context.h  retry_budget.h  runtime.h  scheduler.h  timer.h
proto/: krpc.proto  raft.proto
src/common/: boost_json_url_src.cpp  version.cpp
src/gateway/: gateway_stub.cpp  http_gateway.cpp  http_parser.cpp
src/infra/: infra_stub.cpp  memory_pool.cpp  structured_log.cpp
src/infra/raft/: raft_cluster.cpp  raft_rpc.cpp  raft_storage.cpp
src/net/: net_stub.cpp  reactor_http_server.cpp
src/rpc/: krpc_channel.cpp  rpc_stub.cpp
src/runtime/: coroutine.cpp  hook.cpp  io_manager.cpp  request_context.cpp  retry_budget.cpp  runtime_stub.cpp  scheduler.cpp  timer.cpp
tests/assets/w17_tls/: ca.crt  ca.key  client_a.crt  client_a.key  client_b.crt  client_b.key  server.crt  server.key
tests/unit/: config_snapshot_test.cpp  coroutine_switch_test.cpp  hook_syscall_test.cpp  io_epoll_integration_test.cpp  rpc_abstraction_test.cpp  scheduler_mn_test.cpp  timer_heap_test.cpp  w10_gateway_rpc_trace_metrics_test.cpp  w12_raft_consensus_test.cpp  w12_raft_fault_injection_test.cpp  w12_raft_rpc_transport_test.cpp  w12_raft_storage_recovery_test.cpp  w13_adaptive_lb_circuit_breaker_gray_test.cpp  w14_memory_pool_observability_test.cpp  w15_fullchain_perf_test.cpp  w16_stability_chaos_tuning_test.cpp  w17_hot_reload_tls_rollback_test.cpp  w7_timeout_retry_test.cpp  w8_reactor_http_test.cpp  w9_gateway_router_auth_test.cpp
